fixing heading size on mobile - again

--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ a {
 .about {
 background-color: rgb(236, 226, 224);
 margin-top: -165px;
+margin-bottom: 50px;
 z-index: 1;
 }
 
@@ -158,7 +159,7 @@ and (min-width : 300px)
 and (max-width : 500px) {
 
    h1 {
-    font-size: 30px;
+    font-size: 45px;
     padding-top: 5%;
    }
 
@@ -269,4 +270,5 @@ li {
 align-items: center; */
 min-height: 800px;
 height: auto;
+/* margin-bottom: -300px; */
 }
